Fixed the horizontal scrolling

--- a/generalStyles.css
+++ b/generalStyles.css
@@ -243,6 +243,7 @@ html{
     overflow-x: hidden;
     width: 100%;
     height: 100%;
+    padding-top: 10%;
     margin-top: 30vh;
     z-index: 0;
     top: 0;
